scroll on mobile fix -test

--- a/_sass/3-layout/test-home.scss
+++ b/_sass/3-layout/test-home.scss
@@ -36,11 +36,11 @@
 //}
 
 .bg-video {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
+  min-width: 100%;
   z-index: -2;
   overflow: hidden;
 
@@ -48,8 +48,8 @@
     //position: absolute;
     //left: 0;
     //top: 0;
-    height: 100%;
-    width: 100%;
+    min-height: 100%;
+    min-width: 100%;
     z-index: -1;
     object-fit: cover;
 
@@ -62,3 +62,20 @@
     }
   }
 }
+
+
+//.video {
+//  position: fixed;
+//  right: 0;
+//  bottom: 0;
+//  min-width: 100%;
+//  min-height: 100%;
+//
+//  &::before {
+//    content:"";
+//    position: absolute;
+//    top: 0; right: 0; left: 0; bottom: 0;
+//    z-index: 1;
+//    background: linear-gradient(to top right, rgba($dark-blue, 0.9), rgba($cold-blue, 0.9));
+//  }
+//}
